--- a/Frameworks/MP42Foundation.framework/Versions/A/Resources/Info.plist
+++ b/Frameworks/MP42Foundation.framework/Versions/A/Resources/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>19A512f</string>
+	<string>19A526h</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
@@ -29,17 +29,17 @@
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>11M374r</string>
+	<string>11M382q</string>
 	<key>DTPlatformVersion</key>
 	<string>GM</string>
 	<key>DTSDKBuild</key>
-	<string>19A512e</string>
+	<string>19A526e</string>
 	<key>DTSDKName</key>
 	<string>macosx10.15</string>
 	<key>DTXcode</key>
 	<string>1100</string>
 	<key>DTXcodeBuild</key>
-	<string>11M374r</string>
+	<string>11M382q</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2013 Damiano Galassi. All rights reserved.</string>
 </dict>
