Actual playback added. Much more SwiftUI. Smaller changes (e.g. updated Manu Bar). Added audio/video url directly to respective Codables. WARNING: Library Unit Tests don't build because of some cycle, also "missing creator for mutated node".

--- a/TidalSwift/Info.plist
+++ b/TidalSwift/Info.plist
@@ -34,5 +34,10 @@
 	<true/>
 	<key>NSSupportsSuddenTermination</key>
 	<true/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 </dict>
 </plist>
