--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,10 +1,13 @@
 disabled_rules: # rule identifiers to exclude from running
  - type_name
-# - line_length
+ - line_length
  - file_length
  - type_body_length
  - identifier_name
  - vertical_parameter_alignment
+ - cyclomatic_complexity
+# - multiple_closures_with_trailing_closure # TODO: Disable again
+ - attributes
 opt_in_rules: # some rules are only opt-in
  - empty_count
  - closure_end_indentation
