Lib: Rename and add some Playlist Editing functions. Simplify formArtistString(). Update & refactor Unit Tests.

--- a/TidalSwift.xcodeproj/xcshareddata/xcschemes/TidalSwift.xcscheme
+++ b/TidalSwift.xcodeproj/xcshareddata/xcschemes/TidalSwift.xcscheme
@@ -65,6 +65,11 @@
                BlueprintName = "TidalSwiftTests"
                ReferencedContainer = "container:TidalSwift.xcodeproj">
             </BuildableReference>
+            <SkippedTests>
+               <Test
+                  Identifier = "TidalSwiftTests">
+               </Test>
+            </SkippedTests>
          </TestableReference>
       </Testables>
    </TestAction>
